--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="col-lg-6">
                         <div class="about-content">
                             <div class="section-header text-left">
-                                <p>Learn About Me</p>
+                                <h2>Learn About Me</h2>
                             </div>
                             <div class="about-text">
                                 <p>
