--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="col-lg-6">
                         <div class="about-img">
                             <!-- <img src="img/u4.svg" alt="Image"> -->
-                            <img src="img/about.jpg" alt="Image">
+                            <img src="img/u4.svg" alt="Image">
                         </div>
                     </div>
                     <div class="col-lg-6">
