--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                             </div>
                             <div class="portfolio-text">
                                 <h3> Botopia </h3>
-                                <a class="btn" href="img/discord-bots.webp" data-lightbox="portfolio">+</a>
+                                <a class="btn" href="img/discord-bots.webp" >+</a>
                             </div>
                         </div>
                     </div>
@@ -292,7 +292,7 @@
                             </div>
                             <div class="portfolio-text">
                                 <h3> Book Directory </h3>
-                                <a class="btn" href="https://github.com/Elevenv/Book-Directory" data-lightbox="portfolio">+</a>
+                                <a class="btn" target="blank" href="https://github.com/Elevenv/Book-Directory" >+</a>
                             </div>
                         </div>
                     </div>
@@ -303,7 +303,7 @@
                             </div>
                             <div class="portfolio-text">
                                 <h3>Rock Paper Scissor</h3>
-                                <a class="btn" href="https://github.com/Elevenv/RpS" data-lightbox="portfolio">+</a>
+                                <a class="btn" target="blank" href="https://github.com/Elevenv/RpS" >+</a>
                             </div>
                         </div>
                     </div>
@@ -314,7 +314,7 @@
                             </div>
                             <div class="portfolio-text">
                                 <h3>Chat App</h3>
-                                <a class="btn" href="https://github.com/Elevenv/ChatApp" data-lightbox="portfolio">+</a>
+                                <a class="btn" target="blank" href="https://github.com/Elevenv/ChatApp" >+</a>
                             </div>
                         </div>
                     </div>
@@ -325,7 +325,7 @@
                             </div>
                             <div class="portfolio-text">
                                 <h3> Sudoers Portfolio </h3>
-                                <a class="btn" href="https://github.com/Elevenv/Sudoers-portfolio" data-lightbox="portfolio">+</a>
+                                <a class="btn" target="blank" href="https://github.com/Elevenv/Elevenv.github.io" >+</a>
                             </div>
                         </div>
                     </div>
@@ -347,19 +347,19 @@
                                 <div id="success"></div>
                                 <div id="contactForm">
                                     <div class="control-group">
-                                        <input type="text" class="form-control" id="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name" />
+                                        <input type="text" class="form-control" id="name" placeholder="Your Name" required data-validation-required-message="Please enter your name" />
                                         <p class="help-block"></p>
                                     </div>
                                     <div class="control-group">
-                                        <input type="email" class="form-control" id="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email" />
+                                        <input type="email" class="form-control" id="email" placeholder="Your Email" required data-validation-required-message="Please enter your email" />
                                         <p class="help-block"></p>
                                     </div>
                                     <div class="control-group">
-                                        <input type="text" class="form-control" id="subject" placeholder="Subject" required="required" data-validation-required-message="Please enter a subject" />
+                                        <input type="text" class="form-control" id="subject" placeholder="Subject" required data-validation-required-message="Please enter a subject" />
                                         <p class="help-block"></p>
                                     </div>
                                     <div class="control-group">
-                                        <textarea class="form-control" id="message" placeholder="Message" required="required" data-validation-required-message="Please enter your message"></textarea>
+                                        <textarea class="form-control" id="message" placeholder="Message" required data-validation-required-message="Please enter your message"></textarea>
                                         <p class="help-block"></p>
                                     </div>
                                     <div>
