--- a/index.html
+++ b/index.html
@@ -385,9 +385,11 @@
                             <p>vitthaljadhav1420@gmail.com</p>
                         </div>
                         <div class="footer-social">
-                            <a href="https://github.com/Elevenv"><i class="fab fa-github"></i></a>
-                            <a href="https://www.instagram.com/_0eleven_/"><i class="fab fa-instagram"></i></a>
-                            <a href="https://www.linkedin.com/in/vitthal-jadhav-6323731"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://github.com/Elevenv" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://www.codechef.com/users/elevenv" target="_blank"><i> <img src="img/codechef.png" style="width: 25px;height:25px"> </i> </a>
+                            <a href="https://www.hackerrank.com/deltakraken18?hr_r=1" target="_blank"><i class="fab fa-hackerrank"></i></a>
+                            <a href="https://www.instagram.com/_0eleven_/" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/vitthal-jadhav-6323731" target="_blank" ><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
