updated experience section

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                             <h2>Python</h2>
                             <h4> Django, Numpy, Pandas, Matplotlib </h4>
                             <p>
-                                Python is commonly used for developing websites and software, task automation, data analysis, and data visualization.
+                                <!-- Python is commonly used for developing websites and software, task automation, data analysis, and data visualization. -->
                             </p>
                         </div>
                     </div>
@@ -214,8 +214,8 @@
                             <h2> Java </h2>
                             <!-- <h4>Soft Agency, San Francisco, CA</h4> -->
                             <p>
-                                Java is a computing platform for application development. It is widely used for developing Java applications in laptops, 
-                                data centers, game consoles, cell phones, etc. 
+                                <!-- Java is a computing platform for application development. It is widely used for developing Java applications in laptops, 
+                                data centers, game consoles, cell phones, etc.  -->
                             </p>
                         </div>
                     </div>
@@ -225,7 +225,7 @@
                             <h2>JavaScript</h2>
                             <h4>Client Side Tech</h4>
                             <p>
-                                Javascript is used by programmers across the world to create dynamic and interactive web content like applications and browsers.
+                                <!-- Javascript is used by programmers across the world to create dynamic and interactive web content like applications and browsers. -->
                             </p>
                         </div>
                     </div>
@@ -235,8 +235,8 @@
                             <h2>Node.js Express.js</h2>
                             <h4>Server Side Techs</h4>
                             <p>
-                                Express. js is a free and open-source web application framework for Node. js. 
-                                It is used for designing and building web applications quickly and easily.
+                                <!-- Express. js is a free and open-source web application framework for Node. js. 
+                                It is used for designing and building web applications quickly and easily. -->
                             </p>
                         </div>
                     </div>
@@ -246,7 +246,7 @@
                             <h2>HTML</h2>
                             <h4>Css Bootstrap</h4>
                             <p>
-                                HTML is used to structure a web page and its content. Css and Bootstrap are used to design modern websites and web apps.
+                                <!-- HTML is used to structure a web page and its content. Css and Bootstrap are used to design modern websites and web apps. -->
                             </p>
                         </div>
                     </div>
@@ -256,8 +256,8 @@
                             <h2>Database</h2>
                             <h4> MySQL, MongoDB, PostgreSQL </h4>
                             <p>
-                                Databases are used for storing, maintaining and accessing any sort of data.
-                                That information is gathered in one place so that it can be observed and analyzed.
+                                <!-- Databases are used for storing, maintaining and accessing any sort of data.
+                                That information is gathered in one place so that it can be observed and analyzed. -->
                             </p>
                         </div>
                     </div>
